@@ -24,6 +24,21 @@ sourceSets {
       exclude 'be/kuleuven/cs/distrinet/jnome/tool/**'
     }
   }
+  test {
+    java {
+      srcDir 'src'
+      exclude 'be/kuleuven/cs/distrinet/jnome/eclipse/**'
+      exclude 'be/kuleuven/cs/distrinet/jnome/tool/dependency/**'
+      exclude 'be/kuleuven/cs/distrinet/jnome/tool/**'
+    }
+  }
+}
+
+test {
+  scanForTestClasses false
+  include '**/AllTests.class'
+  outputs.upToDateWhen { false }
+  jvmArgs '-Xloggc:garbage.log', '-XX:+PrintGCDetails', '-XX:+PrintGCDateStamps'
 }
 
 configurations {
@@ -51,9 +66,15 @@ dependencies {
    //compile project(':rejuse')
    //compile project(':chameleon')
    compile group: 'markovandooren', name: 'rejuse', version: '1.3.1'
-   compile group: 'markovandooren', name: 'chameleon', version: '1.1.14'
+   compile group: 'markovandooren', name: 'chameleon', version: '1.1.18'
    compile 'org.ow2.asm:asm:5.0.3'
    compile 'com.lexicalscope.jewelcli:jewelcli:0.8.5'
    compile 'net.sf.jgrapht:jgrapht:+'
    compile 'org.antlr:antlr:3.2'
 }
+
+
+task testGroupTwo(type: Test) {
+   include '**/AllTests.class'
+}
+
